--- a/Design Patterns/advanced_channel_groups.asciidoc
+++ b/Design Patterns/advanced_channel_groups.asciidoc
@@ -140,6 +140,10 @@ fmt.Println("Channel added to channel group")
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 // Get the List of Friends
 listChannelsRes, _, err := pn.ListChannelsInChannelGroup().
     ChannelGroup("cg-user-a-friends").
@@ -189,6 +193,10 @@ pn.Subscribe(&pubnub.SubscribeOperation{
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 listener := pubnub.NewListener()
 
 go func() {
