--- a/Tutorials/presence.asciidoc
+++ b/Tutorials/presence.asciidoc
@@ -3,6 +3,10 @@
 [source, go]
 .SETTING UUID
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 config := pubnub.NewConfig()
 config.SubscribeKey = "my_sub_key"
 config.PublishKey = "my_pub_key"
@@ -14,6 +18,10 @@ pn = pubnub.NewPubNub(config)
 [source, go]
 .RECEIVING PRESENCE JOIN, LEAVE, AND TIMEOUT EVENTS IN REALTIME
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 pn.Subscribe(&pubnub.SubscribeOperation{
     Channels:        []string{"my-channel"},
     PresenceEnabled: true,
@@ -106,6 +114,10 @@ for _, v := range res.Channels {
 [source, go]
 .EXAMPLE RESPONSE
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.HereNowResponse{
     TotalChannels:1,
     TotalOccupancy:1,
@@ -138,6 +150,10 @@ fmt.Println(res, status, err)
 [source, go]
 .EXAMPLE RESPONSE
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.HereNowResponse{
     TotalChannels:2,
     TotalOccupancy:2,
@@ -177,6 +193,10 @@ fmt.Println(res, status, err)
 [source, go]
 .EXAMPLE RESPONSE
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.WhereNowResponse{
     Channels:[]string{
         "my-ch1", "my-ch"
@@ -220,6 +240,10 @@ In addition to setting state via the setPresenceState() setter method, you can s
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 listener := pubnub.NewListener()
 state := map[string]interface{}
 
@@ -255,6 +279,10 @@ In this case, the join event would also include the state information, similar t
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.PNPresence{
     Event:"join",
     Uuid:"e23153ec-cf12-464b-9c87-652bd91fff8d",
@@ -276,6 +304,10 @@ In this case, the join event would also include the state information, similar t
 [source, go]
 .HERE NOW AND WHERE NOW ADVANCED USAGE
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.HereNowResponse{
     TotalChannels:2,
     TotalOccupancy:2,
@@ -308,6 +340,10 @@ Calling with state as false returns the UUIDs, but not the state data:
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.HereNowResponse{
     TotalChannels:2,
     TotalOccupancy:2,
@@ -340,6 +376,10 @@ and calling with uuid as false omits all UUID and state data (since state is a c
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 &pubnub.HereNowResponse{
     TotalChannels:2,
     TotalOccupancy:2,
@@ -371,6 +411,10 @@ and calling with uuid as false omits all UUID and state data (since state is a c
 [source, go]
 .OPTIMIZING TIMEOUT EVENTS WITH HEARTBEAT TUNING
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 config := pubnub.NewConfig()
 config.SubscribeKey = "my-sub-key"
 config.PublishKey = "my-pub-key"
@@ -383,6 +427,10 @@ At the expense of additional network bandwidth to send additional heartbeat ping
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 config := pubnub.NewConfig()
 config.SubscribeKey = "my-sub-key"
 config.PublishKey = "my-pub-key"
@@ -395,6 +443,10 @@ By default, the client will send a heartbeat ping every HEARTBEAT / 2 - 1 second
 
 [source, go]
 ----
+import (
+    pubnub "github.com/pubnub/go"
+)
+
 config := pubnub.NewConfig()
 config.SubscribeKey = "my-sub-key"
 config.PublishKey = "my-pub-key"
