--- a/ApiReference.asciidoc
+++ b/ApiReference.asciidoc
@@ -1629,7 +1629,7 @@ fmt.Println(res, status, err)
 ====== Response
 
 |===
-| Method | type | Required | Defaults | Description
+| Method | type | Description
 
-| Timetoken | int64 | false | | Returns a `date` representation of current time token.
+| Timetoken | int64 | Returns a `date` representation of current time token.
 |===
